<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".SignUp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_color"
                tools:context=".SignUp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/sing_up_welcome"
                    android:textColor="@color/primary_text"
                    android:textSize="28sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="32dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardElevation="0dp"
                    app:cardMaxElevation="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:elevation="25dp"
                        app:srcCompat="@drawable/logo_sell_now"
                        tools:ignore="ContentDescription" />

                </androidx.cardview.widget.CardView>

                <EditText
                    android:id="@+id/signupEmailInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="24dp"
                    android:autofillHints=""
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/custom_email"
                    android:drawablePadding="10sp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:padding="10sp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/primary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    tools:ignore="VisualLintTextFieldSize" />

                <TextView
                    android:id="@+id/signUpEmailErMsg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/custom_button_profile"
                    android:backgroundTint="@color/google_color"
                    android:fontFamily="@font/quicksand_medium"
                    android:padding="2dp"
                    android:paddingStart="10dp"
                    android:text="@string/signUpEmailErMsg"
                    android:textColor="@color/white"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signupEmailInput" />

                <EditText
                    android:id="@+id/signupPaswordInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="24dp"
                    android:autofillHints=""
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/customa_lock"
                    android:drawablePadding="10sp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:padding="10sp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/primary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signUpEmailErMsg"
                    tools:ignore="VisualLintTextFieldSize" />

                <TextView
                    android:id="@+id/signUpPasswordErMsg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/custom_button_profile"
                    android:backgroundTint="@color/google_color"
                    android:fontFamily="@font/quicksand_medium"
                    android:padding="2dp"
                    android:paddingStart="10dp"
                    android:text="@string/signUpPasswordErMsg"
                    android:textColor="@color/white"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signupPaswordInput" />

                <EditText
                    android:id="@+id/signupConfirmPasswordInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="24dp"
                    android:autofillHints=""
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/customa_lock"
                    android:drawablePadding="10sp"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:padding="10sp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/primary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signUpPasswordErMsg"
                    tools:ignore="VisualLintTextFieldSize" />

                <TextView
                    android:id="@+id/signUpConfirmPasswordErMsg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/custom_button_profile"
                    android:backgroundTint="@color/google_color"
                    android:fontFamily="@font/quicksand_medium"
                    android:padding="2dp"
                    android:paddingStart="10dp"
                    android:text="@string/signUpConfirmPasswordErMsg"
                    android:textColor="@color/white"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signupConfirmPasswordInput" />

                <TextView
                    android:id="@+id/signUpPasswordNotMatchErMsg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/custom_button_profile"
                    android:backgroundTint="@color/google_color"
                    android:fontFamily="@font/quicksand_medium"
                    android:padding="2dp"
                    android:paddingStart="10dp"
                    android:text="@string/signUpPasswordNotMatchErMsg"
                    android:textColor="@color/white"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signUpConfirmPasswordErMsg" />

                <Button
                    android:id="@+id/signupRegistrarseBtn"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:backgroundTint="@color/primary"
                    android:text="registrarse"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signUpPasswordNotMatchErMsg"
                    tools:ignore="HardcodedText,TextContrastCheck,VisualLintButtonSize" />

                <Button
                    android:id="@+id/signupLoginBtn"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:backgroundTint="@color/primary"
                    android:text="login"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signupRegistrarseBtn"
                    tools:ignore="HardcodedText,TextContrastCheck,VisualLintButtonSize" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>